<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blackmetal_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TableLayout
        android:id="@+id/TableLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:paddingLeft="10dp"
            android:text="@string/username"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#00ff00" />

        <TextView
            android:id="@+id/mUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:paddingLeft="10dp"
            android:text="Serraz :)"
            android:textAlignment="gravity"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />
        
        <TextView
            android:id="@+id/tvPayoutHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:paddingLeft="10dp"
            android:text="@string/payoutHistory"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#00ff00"
            android:textColorLink="#00ff00" />

        <TextView
            android:id="@+id/mPayoutHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:paddingLeft="10dp"
            android:text="0.00"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />
        
        <TextView
            android:id="@+id/tvConfirmedRewards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:paddingLeft="10dp"
            android:text="@string/confirmedRewards"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#00ff00"
            android:textColorLink="#00ff00" />

        <TextView
            android:id="@+id/mConfirmedRewards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:paddingLeft="10dp"
            android:text="0.00"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />
		
        <TextView
            android:id="@+id/tvRoundShares"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:paddingLeft="10dp"
            android:text="@string/roundShares"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#00ff00" />

        <TextView
            android:id="@+id/mRoundShares"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:paddingLeft="10dp"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />
        
        <TextView
            android:id="@+id/tvRoundEstimate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:paddingLeft="10dp"
            android:text="@string/roundEstimate"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#00ff00" />

        <TextView
            android:id="@+id/mRoundEstimate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:paddingLeft="10dp"
            android:text="0.00"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/tvTotalHashrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:paddingLeft="10dp"
            android:text="@string/totalHashrate"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#00ff00" />

        <TextView
            android:id="@+id/mTotalHashrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="0.00"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btRefresh"
            android:text="@string/bt_refresh"
            android:background="@drawable/green_button"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="2dp"
            style="@style/ButtonText" />

    </TableLayout>

</RelativeLayout>